updated citations a some histry about neutrinos

--- a/references.bib
+++ b/references.bib
@@ -498,6 +498,29 @@ year = {2006}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
 
+
+@article{Pejcha2012a,
+abstract = {(Abridged) Neutrino heating may drive core-collapse supernova explosions. Although it is known that the stalled accretion shock turns into explosion when the neutrino luminosity from the collapsed core exceeds a critical value (L{\_}crit) (the "neutrino mechanism"), the physics of L{\_}crit, as well as its dependence on the properties of the proto-neutron star (PNS) and changes to the microphysics has never been systematically explored. We solve the one-dimensional steady-state accretion problem between the PNS surface and the accretion shock. We quantify the deep connection between the solution space of steady-state accretion flows with bounding shocks and the neutrino mechanism. We show that there is a maximum, critical sound speed above which it is impossible to maintain accretion with a standoff shock, because the shock jump conditions cannot be satisfied. The physics of this critical sound speed is general and does not depend on a specific heating mechanism. For the simple model of pressure-less free-fall onto a shock bounding an isothermal accretion flow with sound speed c{\_}T, we show that if c{\_}T{\^{}}2/v{\_}escape{\^{}}2 {\textgreater} 3/16 explosion results. We generalize this result to the more complete supernova problem, showing explicitly that the same physics determines L{\_}crit. We find that the critical condition for explosion can be written as c{\_}S{\^{}}2/v{\_}escape{\^{}}2 = 0.19, where c{\_}S is the adiabatic sound speed. This "antesonic" condition describes L{\_}crit over a broad range in accretion rate and microphysics. We show that the addition of the accretion luminosity (L{\_}acc) reduces L{\_}crit non-trivially. As in previous work, we find that L{\_}crit is always significantly higher than the maximum possible value of L{\_}acc. Finally, we provide evidence that the reduction in L{\_}crit seen in recent multi-dimensional simulations results from a reduction in the efficiency of cooling, rather than an increase in the heating rate.},
+archivePrefix = {arXiv},
+arxivId = {1103.4864},
+author = {Pejcha, Ondřej and Thompson, Todd A.},
+doi = {10.1088/0004-637X/746/1/106},
+eprint = {1103.4864},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Pejcha, Thompson/2012 - Astrophysical Journal.pdf:pdf},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+keywords = {accretion,accretion disks,hydrodynamics,instabilities,shock waves,supernovae: general},
+mendeley-groups = {Neutrino,Neutrino/astro,Neutrino/supernova},
+month = {feb},
+number = {1},
+pages = {106},
+title = {{THE PHYSICS OF THE NEUTRINO MECHANISM OF CORE-COLLAPSE SUPERNOVAE}},
+url = {http://stacks.iop.org/0004-637X/746/i=1/a=106?key=crossref.86835641aac1fd1f9a4cc23f89772e91},
+volume = {746},
+year = {2012}
+}
+
+
 @article{Lande2003,
       author         = "Lande, K. and Wildenhain, P.",
       title          = "{The Homestake chlorine solar neutrino experiment: Past,
