--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -69,7 +69,7 @@ Professor Huaiyu Duan}
 \include{chapters/introduction}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
-% \include{chapters/chapter4}
+\include{chapters/chapter4}
 % \include{chapters/chapter5}
 % \include{chapters/conclusion}
 % \include{chapters/appendices}
