--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -71,7 +71,7 @@ Professor Huaiyu Duan}
 \include{chapters/chapter3}
 \include{chapters/chapter4}
 % \include{chapters/chapter5}
-% \include{chapters/conclusion}
+\include{chapters/conclusion}
 % \include{chapters/appendices}
 % \include{chapters/glossary}
 
