--- a/references.bib
+++ b/references.bib
@@ -1461,6 +1461,26 @@ year = {1996}
 }
 
 
+@article{Capozzi2017,
+abstract = {Supernova neutrinos can exhibit a rich variety of flavor conversion mechanisms. In particular, they can experience "fast" self-induced flavor conversions almost immediately above the core. Very recently, a novel method has been proposed to investigate these phenomena, in terms of the dispersion relation for the complex frequency and wave number ({\$}\backslashomega{\$},{\$}k{\$}) of disturbances in the mean field of the {\$}\backslashnu{\_}e\backslashnu{\_}x{\$} flavor coherence. We discuss a systematic approach to such instabilities, originally developed in the context of plasma physics, and based of the time-asymptotic behavior of the Green's function of the system. Instabilities are typically seen to emerge for complex {\$}\backslashomega{\$}, and can be further characterized as convective (moving away faster than they spread) and absolute (growing locally), depending on {\$}k{\$}-dependent features. Stable cases emerge when {\$}k{\$} (but not {\$}\backslashomega{\$}) is complex, leading to disturbances damped in space, or when both {\$}\backslashomega{\$} and {\$}k{\$} are real, corresponding to complete stability. The analytical classification of both unstable and stable modes leads not only to qualitative insights about their features but also to quantitative predictions about the growth rates of instabilities. Representative numerical solutions are discussed in a simple two-beam model of interacting neutrinos. As an application, we argue that supernova and binary neutron star mergers exhibiting a "crossing" in the electron lepton number would lead to an absolute instability in the flavor content of the neutrino gas.},
+archivePrefix = {arXiv},
+arxivId = {1706.03360},
+author = {Capozzi, Francesco and Dasgupta, Basudeb and Lisi, Eligio and Marrone, Antonio and Mirizzi, Alessandro},
+doi = {10.1103/PhysRevD.96.043016},
+eprint = {1706.03360},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Capozzi et al/2017 - Physical Review D.pdf:pdf},
+issn = {24700029},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/collective},
+number = {4},
+pages = {1--20},
+title = {{Fast flavor conversions of supernova neutrinos: Classifying instabilities via dispersion relations}},
+volume = {96},
+year = {2017}
+}
+
+
+
 
 
 
