update jacobi anger expansion: tiny fixes

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -72,7 +72,7 @@ Professor Huaiyu Duan}
 \include{chapters/chapter4}
 % \include{chapters/chapter5}
 \include{chapters/conclusion}
-% \include{chapters/appendices}
+\include{chapters/appendices}
 % \include{chapters/glossary}
 
 
