--- a/references.bib
+++ b/references.bib
@@ -811,7 +811,22 @@ volume = {89},
 year = {2014}
 }
 
-
+@article{Patton:2014lza,
+      author         = "Patton, Kelly M. and Kneller, James P. and McLaughlin,
+                        Gail C.",
+      title          = "{Stimulated neutrino transformation through turbulence on
+                        a changing density profile and application to supernovae}",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
+      year           = "2015",
+      number         = "2",
+      pages          = "025001",
+      doi            = "10.1103/PhysRevD.91.025001",
+      eprint         = "1407.7835",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1407.7835;%%"
+}
 
 
 @article{Duan2006a,
