update chap 3; update chap 4 about equation of motion

--- a/preambles.tex
+++ b/preambles.tex
@@ -53,7 +53,8 @@ sorting=ynt
 %%height=10in,a5paper,hmargin={3cm,0.8in},
 %]{geometry}
 
-\usepackage{amsmath}
+% \usepackage{amsmath}
+\usepackage{amsmath,thmtools}
 \usepackage{amssymb}
 
 \usepackage{tikz}
