--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,16 @@
+%@STRING{ jan = 1 }
+%@STRING{ feb = 2 }
+%@STRING{ mar = 3 }
+%@STRING{ apr = 4 }
+%@STRING{ may = 5 }
+%@STRING{ jun = 6 }
+%@STRING{ jul = 7 }
+%@STRING{ aug = 8 }
+%@STRING{ sep = 9 }
+%@STRING{ oct = 10 }
+%@STRING{ nov = 11 }
+%@STRING{ dec = 12 }
+
 % @STRING{ jan = "January" }
 % @STRING{ feb = "February" }
 % @STRING{ mar = "March" }
@@ -11,18 +24,6 @@
 % @STRING{ nov = "November" }
 % @STRING{ dec = "December" }
 
-% @STRING{ {jan} = "January" }
-% @STRING{ {feb} = "February" }
-% @STRING{ {mar} = "March" }
-% @STRING{ {apr} = "April" }
-% @STRING{ {may} = "May" }
-% @STRING{ {jun} = "June" }
-% @STRING{ {jul} = "July" }
-% @STRING{ {aug} = "August" }
-% @STRING{ {sep} = "September" }
-% @STRING{ {oct} = "October" }
-% @STRING{ {nov} = "November" }
-% @STRING{ {dec} = "December" }
 
 
 @misc{westworld2016,
@@ -143,7 +144,7 @@ issn = {1475-7516},
 journal = {Journal of Cosmology and Astroparticle Physics},
 keywords = {Cosmological neutrinos,Dark energy theory,Neutrino properties,Supernova neutrinos},
 mendeley-groups = {Neutrino/mass},
-month = {oct},
+month = oct,
 number = {10},
 pages = {005--005},
 primaryClass = {astro-ph},
@@ -208,7 +209,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bethe, Brown/1
 issn = {0036-8733},
 journal = {Scientific American},
 mendeley-groups = {Astrophysics/supernova,Neutrino/astro},
-month = {may},
+month = may,
 number = {5},
 pages = {60--68},
 title = {{How a Supernova Explodes}},
@@ -234,7 +235,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Reports on Progress in Physics/A
 issn = {0034-4885},
 journal = {Reports on Progress in Physics},
 mendeley-groups = {Neutrino/neutrino-astrophysics},
-month = {jan},
+month = jan,
 number = {1},
 pages = {97--146},
 title = {{Solar neutrinos}},
@@ -281,7 +282,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 
 issn = {0556-2821},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino,Neutrino/MSW},
-month = {may},
+month = may,
 number = {9},
 pages = {2369--2374},
 title = {{Neutrino oscillations in matter}},
@@ -415,7 +416,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/The Astrophysical Journal/Totani
 issn = {0004-637X},
 journal = {The Astrophysical Journal},
 mendeley-groups = {Neutrino/astro},
-month = {mar},
+month = mar,
 number = {1},
 pages = {216--225},
 title = {{Future Detection of Supernova Neutrino Burst and Explosion Mechanism}},
@@ -433,7 +434,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Parke/1986 - P
 issn = {0031-9007},
 journal = {Physical Review Letters},
 mendeley-groups = {Neutrino/MSW},
-month = {sep},
+month = sep,
 number = {10},
 pages = {1275--1278},
 title = {{Nonadiabatic Level Crossing in Resonant Neutrino Oscillations}},
@@ -480,7 +481,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Duan, Fuller, 
 issn = {1550-7998},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/collective},
-month = {dec},
+month = dec,
 number = {12},
 pages = {123004},
 primaryClass = {astro-ph},
@@ -511,7 +512,7 @@ issn = {0004-637X},
 journal = {The Astrophysical Journal},
 keywords = {accretion,accretion disks,hydrodynamics,instabilities,shock waves,supernovae: general},
 mendeley-groups = {Neutrino,Neutrino/astro,Neutrino/supernova},
-month = {feb},
+month = feb,
 number = {1},
 pages = {106},
 title = {{THE PHYSICS OF THE NEUTRINO MECHANISM OF CORE-COLLAPSE SUPERNOVAE}},
@@ -613,7 +614,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Kneller, McLau
 issn = {1550-7998},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/matter},
-month = {mar},
+month = mar,
 number = {5},
 pages = {056003},
 title = {{Monte Carlo neutrino oscillations}},
@@ -630,7 +631,7 @@ year = {2006}
 % issn = {0556-2821},
 % journal = {Physical Review D},
 % mendeley-groups = {Neutrino,Neutrino/MSW},
-% month = {May},
+% month = may,
 % number = {9},
 % pages = {2369--2374},
 % title = {{Neutrino oscillations in matter}},
@@ -662,7 +663,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physics Letters B/Petcov - 1998 
 issn = {03702693},
 journal = {Physics Letters B},
 mendeley-groups = {Neutrino/parametric-effect},
-month = {Aug},
+month = aug,
 number = {3-4},
 pages = {321--332},
 primaryClass = {hep-ph},
@@ -680,7 +681,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 
 issn = {0556-2821},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/MSW,Physics/HEP},
-month = {nov},
+month = nov,
 number = {10},
 pages = {2634--2635},
 title = {{Neutrino oscillations and stellar collapse}},
@@ -697,7 +698,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Reviews of Modern Physics/Kuo, P
 issn = {0034-6861},
 journal = {Reviews of Modern Physics},
 mendeley-groups = {Neutrino/matter},
-month = {oct},
+month = oct,
 number = {4},
 pages = {937--979},
 title = {{Neutrino oscillations in matter}},
@@ -714,7 +715,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physics Letters B/Krastev, Smirn
 issn = {03702693},
 journal = {Physics Letters B},
 mendeley-groups = {Neutrino/matter,Neutrino/parametric-effect},
-month = {August},
+month = aug,
 number = {3-4},
 pages = {341--346},
 title = {{Parametric effects in neutrino oscillations}},
@@ -735,7 +736,7 @@ issn = {05503213},
 journal = {Nuclear Physics B},
 keywords = {1,2,e i n,e n s t,e y e v,earth,effect,have a simple analogue,i n t r,in clas-,it is well known,m i k h,m s w,matter effects,n o v -,neutrino oscillations in matter,neutrinos,o d u c,s m i r,t i o n,that the resonantly enhanced,the,w o l f},
 mendeley-groups = {Neutrino/parametric-effect},
-month = {jan},
+month = jan,
 number = {1-2},
 pages = {25--51},
 primaryClass = {hep-ph},
@@ -757,7 +758,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Pramana/Akhmedov - 2000 - Parame
 issn = {0304-4289},
 journal = {Pramana},
 mendeley-groups = {Neutrino/stimulated,Neutrino,Neutrino/parametric-effect},
-month = {January},
+month = jan,
 number = {1},
 pages = {47--63},
 primaryClass = {hep-ph},
@@ -782,7 +783,7 @@ journal = {Journal of Physics G: Nuclear and Particle Physics},
 keywords = {Matter Effect,Neutrinos,Parametric Resonance,Stimulated Neutrino Oscillation},
 mendeley-groups = {Neutrino/stimulated},
 mendeley-tags = {Matter Effect,Stimulated Neutrino Oscillation},
-month = {May},
+month = may,
 number = {5},
 pages = {055002},
 title = {{Stimulated neutrino transformation with sinusoidal density profiles}},
@@ -802,7 +803,7 @@ journal = {Physical Review D},
 keywords = {Matter Effect,Stimulated Neutrino Oscillation},
 mendeley-groups = {Neutrino/matter,Neutrino/stimulated,Neutrino},
 mendeley-tags = {Matter Effect,Stimulated Neutrino Oscillation},
-month = {apr},
+month = apr,
 number = {7},
 pages = {073022},
 title = {{Stimulated neutrino transformation through turbulence}},
@@ -840,7 +841,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Duan, Fuller, 
 issn = {1550-7998},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/collective},
-month = {dec},
+month = dec,
 number = {12},
 pages = {123004},
 primaryClass = {astro-ph},
@@ -862,7 +863,7 @@ issn = {03702693},
 journal = {Physics Letters B},
 keywords = {13.15.+g,14.60.Pq},
 mendeley-groups = {Neutrino/astro},
-month = {may},
+month = may,
 number = {1-2},
 pages = {94--106},
 primaryClass = {hep-ph},
@@ -900,7 +901,7 @@ issn = {0035-8711},
 journal = {Monthly Notices of the Royal Astronomical Society},
 keywords = {hydrodynamics,instabilities,neutrinos,radiative},
 mendeley-groups = {Neutrino/astro},
-month = {feb},
+month = feb,
 number = {3},
 pages = {2141--2174},
 title = {{Non-radial instabilities and progenitor asphericities in core-collapse supernovae}},
@@ -918,7 +919,7 @@ issn = {1538-4357},
 journal = {The Astrophysical Journal},
 keywords = {general,hydrodynamics,neutrinos,supernovae},
 mendeley-groups = {Neutrino/astro},
-month = {jan},
+month = jan,
 number = {1},
 pages = {5},
 title = {{The Role of Turbulence in Neutrino-driven Core-collapse Supernova Explosions}},
@@ -956,7 +957,7 @@ author = {Friedland, Alexander and Gruzinov, Andrei},
 eprint = {0607244},
 file = {:Users/leima/Documents/Mendeley Desktop/Unknown/Friedland, Gruzinov - 2006 - Neutrino signatures of supernova turbulence.pdf:pdf},
 mendeley-groups = {Neutrino/matter,Neutrino},
-month = {jul},
+month = jul,
 pages = {1--5},
 primaryClass = {astro-ph},
 title = {{Neutrino signatures of supernova turbulence}},
@@ -976,7 +977,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Kneller, Volpe
 issn = {1550-7998},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/matter},
-month = {dec},
+month = dec,
 number = {12},
 pages = {123004},
 title = {{Turbulence effects on supernova neutrinos}},
@@ -996,7 +997,7 @@ file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Loreti, Balant
 issn = {0556-2821},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/matter},
-month = {oct},
+month = oct,
 number = {8},
 pages = {4762--4770},
 primaryClass = {nucl-th},
@@ -1023,7 +1024,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Flowers, Suthe
 issn = {0004-637X},
 journal = {The Astrophysical Journal},
 mendeley-groups = {Neutrino/collective},
-month = {aug},
+month = aug,
 number = {1},
 pages = {L19},
 title = {{Neutrino-neutrino scattering and supernovae}},
@@ -1043,7 +1044,7 @@ journal = {Nuclear Physics B},
 keywords = {Matter Suppression,Wigner Function},
 mendeley-groups = {Neutrino,Neutrino/TheArticles,Neutrino/theory,Neutrino/collective},
 mendeley-tags = {Matter Suppression,Wigner Function},
-month = {sep},
+month = sep,
 number = {1-2},
 pages = {423--451},
 title = {{General kinetic description of relativistic mixed neutrinos}},
@@ -1081,7 +1082,7 @@ eprint = {1403.5797},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Malkus, Friedland, McLaughlin/2014 - Unknown.pdf:pdf},
 keywords = {a black hole,accretion disk,as home to,forms a black hole,many reasons,mergers are fascinating for,neutrino mixing,neutrinos-neutrino interaction,neutron star and,neutron stars or a,the merger of two,these},
 mendeley-groups = {Neutrino/matter,Neutrino/resonance},
-month = {mar},
+month = mar,
 number = {1},
 pages = {1--6},
 title = {{Matter-Neutrino Resonance Above Merging Compact Objects}},
@@ -1098,7 +1099,7 @@ eprint = {1510.00751},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Vaananen, McLaughlin/2015 - Unknown.pdf:pdf},
 keywords = {neutrino mixing,neutrinos-neutrino interaction},
 mendeley-groups = {Neutrino/matter},
-month = {oct},
+month = oct,
 pages = {1--16},
 title = {{Uncovering the Matter-Neutrino Resonance}},
 url = {http://arxiv.org/abs/1510.00751},
@@ -1118,7 +1119,7 @@ issn = {03702693},
 journal = {Physics Letters B},
 keywords = {black hole accretion disk,core-collapse supernova,dense neutrino medium,neutrino oscillations},
 mendeley-groups = {Neutrino/collective},
-month = {jan},
+month = jan,
 pages = {89--94},
 title = {{Physics of neutrino flavor transformation through \hyphenation{matter neutrino} resonances}},
 url = {http://arxiv.org/abs/1509.08975 http://linkinghub.elsevier.com/retrieve/pii/S0370269315008758},
@@ -1139,7 +1140,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Mangano, Miriz
 issn = {1550-7998},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino,Neutrino/collective},
-month = {apr},
+month = apr,
 number = {7},
 pages = {073017},
 title = {{Damping the neutrino flavor pendulum by breaking homogeneity}},
@@ -1170,7 +1171,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bastian, Bookb
 issn = {0028-0836},
 journal = {Nature},
 mendeley-groups = {Neutrino/supernova},
-month = {mar},
+month = mar,
 number = {6109},
 pages = {135--136},
 title = {{Neutrinos from the recent LMC supernova}},
@@ -1213,7 +1214,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Banerjee, Digh
 issn = {1550-7998},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/collective},
-month = {sep},
+month = sep,
 number = {5},
 pages = {053013},
 primaryClass = {hep-ph},
@@ -1231,7 +1232,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Raffelt, Sarik
 issn = {0031-9007},
 journal = {Physical Review Letters},
 mendeley-groups = {Neutrino,Neutrino/collective},
-month = {aug},
+month = aug,
 number = {9},
 pages = {091101},
 title = {{Axial Symmetry Breaking in Self-Induced Flavor Conversionof Supernova Neutrino Fluxes}},
@@ -1252,7 +1253,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Izaguirre, Raf
 issn = {0031-9007},
 journal = {Physical Review Letters},
 mendeley-groups = {Neutrino/collective},
-month = {jan},
+month = jan,
 number = {2},
 pages = {021101},
 title = {{Fast Pairwise Conversion of Supernova Neutrinos: A Dispersion Relation Approach}},
@@ -1299,7 +1300,7 @@ issn = {0163-8998},
 journal = {Annual Review of Nuclear and Particle Science},
 keywords = {neutrino masses and mixings,neutrino spectral swaps,splits,supernova},
 mendeley-groups = {Neutrino,Neutrino/collective},
-month = {nov},
+month = nov,
 number = {1},
 pages = {569--594},
 title = {{Collective Neutrino Oscillations}},
@@ -1320,7 +1321,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Chakraborty et
 issn = {1475-7516},
 journal = {Journal of Cosmology and Astroparticle Physics},
 mendeley-groups = {Neutrino/collective},
-month = {mar},
+month = mar,
 number = {03},
 pages = {042--042},
 title = {{Self-induced neutrino flavor conversion without flavor mixing}},
@@ -1341,7 +1342,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Dasgupta, Miri
 issn = {1475-7516},
 journal = {Journal of Cosmology and Astroparticle Physics},
 mendeley-groups = {Neutrino/collective},
-month = {feb},
+month = feb,
 number = {02},
 pages = {019--019},
 title = {{Fast neutrino flavor conversions near the supernova core with realistic flavor-dependent angular distributions}},
@@ -1433,25 +1434,25 @@ year = {2009}
 
 
 
-@article{Izaguirre2016a,
-abstract = {Collective pair conversion {\$}\backslashnu{\_}e\backslashbar\backslashnu{\_}e\backslashleftrightarrow \backslashnu{\_}{\{}x{\}}\backslashbar\backslashnu{\_}{\{}x{\}}{\$} by forward scattering, where {\$}x=\backslashmu{\$} or {\$}\backslashtau{\$}, may be generic for supernova neutrino transport. Depending on the local angular intensity of the electron lepton number carried by neutrinos, the conversion rate is "fast," i.e., of the order of {\$}\backslashsqrt{\{}2{\}}G{\_}{\{}\backslashrm{\{}F{\}}{\}}(n{\_}{\{}\backslashnu{\_}e{\}}{\{}-{\}}\backslash,n{\_}{\{}\backslashbar\backslashnu{\_}e{\}})\backslashgg\backslashDelta m{\^{}}2{\_}{\{}\backslashrm atm{\}}/2E{\$}. We present a novel approach to understand these phenomena: A dispersion relation for the frequency and wave number {\$}(\backslashOmega,\backslashbf{\{}K{\}}){\$} of disturbances in the mean field of {\$}\backslashnu{\_}e\backslashnu{\_}x{\$} flavor coherence. Run-away solutions occur in "dispersion gaps," i.e., in "forbidden" intervals of {\$}\backslashOmega{\$} and/or {\$}\backslashbf{\{}K{\}}{\$} where propagating plane waves do not exist. We stress that the actual solutions also depend on the initial and/or boundary conditions which need to be further investigated.},
-archivePrefix = {arXiv},
-arxivId = {1610.01612},
-author = {Izaguirre, Ignacio and Raffelt, Georg and Tamborra, Irene},
-doi = {10.1103/PhysRevLett.118.021101},
-eprint = {1610.01612},
-file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Izaguirre, Raffelt, Tamborra/2017 - Physical Review Letters.pdf:pdf},
-issn = {0031-9007},
-journal = {Physical Review Letters},
-mendeley-groups = {Neutrino/collective},
-month = {jan},
-number = {2},
-pages = {021101},
-title = {{Fast Pairwise Conversion of Supernova Neutrinos: A Dispersion Relation Approach}},
-url = {http://arxiv.org/abs/1610.01612 http://link.aps.org/doi/10.1103/PhysRevLett.118.021101},
-volume = {118},
-year = {2017}
-}
+% @article{Izaguirre2016a,
+%abstract = {Collective pair conversion {\$}\backslashnu{\_}e\backslashbar\backslashnu{\_}e\backslashleftrightarrow \backslashnu{\_}{\{}x{\}}\backslashbar\backslashnu{\_}{\{}x{\}}{\$} by forward scattering, where {\$}x=\backslashmu{\$} or {\$}\backslashtau{\$}, may be generic for supernova neutrino transport. Depending on the local angular intensity of the electron lepton number carried by neutrinos, the conversion rate is "fast," i.e., of the order of {\$}\backslashsqrt{\{}2{\}}G{\_}{\{}\backslashrm{\{}F{\}}{\}}(n{\_}{\{}\backslashnu{\_}e{\}}{\{}-{\}}\backslash,n{\_}{\{}\backslashbar\backslashnu{\_}e{\}})\backslashgg\backslashDelta m{\^{}}2{\_}{\{}\backslashrm atm{\}}/2E{\$}. We present a novel approach to understand these phenomena: A dispersion relation for the frequency and wave number {\$}(\backslashOmega,\backslashbf{\{}K{\}}){\$} of disturbances in the mean field of {\$}\backslashnu{\_}e\backslashnu{\_}x{\$} flavor coherence. Run-away solutions occur in "dispersion gaps," i.e., in "forbidden" intervals of {\$}\backslashOmega{\$} and/or {\$}\backslashbf{\{}K{\}}{\$} where propagating plane waves do not exist. We stress that the actual solutions also depend on the initial and/or boundary conditions which need to be further investigated.},
+%archivePrefix = {arXiv},
+%arxivId = {1610.01612},
+%author = {Izaguirre, Ignacio and Raffelt, Georg and Tamborra, Irene},
+%doi = {10.1103/PhysRevLett.118.021101},
+%eprint = {1610.01612},
+%file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Izaguirre, Raffelt, Tamborra/2017 - Physical Review Letters.pdf:pdf},
+%issn = {0031-9007},
+%journal = {Physical Review Letters},
+%mendeley-groups = {Neutrino/collective},
+%month = jan,
+%number = {2},
+%pages = {021101},
+%title = {{Fast Pairwise Conversion of Supernova Neutrinos: A Dispersion Relation Approach}},
+%url = {http://arxiv.org/abs/1610.01612 http://link.aps.org/doi/10.1103/PhysRevLett.118.021101},
+%volume = {118},
+%year = {2017}
+%}
 
 
 @article{Samuel1996,
@@ -1465,7 +1466,7 @@ file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Samuel/1996 - 
 issn = {0556-2821},
 journal = {Physical Review D},
 mendeley-groups = {Neutrino/selfinteraction,Neutrino},
-month = {may},
+month = may,
 number = {10},
 pages = {5382--5393},
 primaryClass = {hep-ph},
