--- a/references.bib
+++ b/references.bib
@@ -1496,6 +1496,64 @@ year = {2017}
 }
 
 
+@article{Pastor2002,
+abstract = {In the early universe or in some regions of supernovae, the neutrino refractive index is dominated by the neutrinos themselves. Several previous studies have found numerically that these self-interactions have the effect of coupling different neutrino modes in such a way as to synchronize the flavor oscillations which otherwise would depend on the energy of a given mode. We provide a simple explanation for this baffling phenomenon in analogy to a system of magnetic dipoles which are coupled by their self-interactions to form one large magnetic dipole which then precesses coherently in a weak external magnetic field. In this picture the synchronized neutrino oscillations are perfectly analogous to the weak-field Zeeman effect in atoms.},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/0109035},
+author = {Pastor, Sergio and Raffelt, Georg and Semikoz, Dmitry V.},
+doi = {10.1103/PhysRevD.65.053011},
+eprint = {0109035},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Pastor, Raffelt, Semikoz/2002 - Physical Review D.pdf:pdf},
+issn = {0556-2821},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/collective},
+month = {feb},
+number = {5},
+pages = {053011},
+primaryClass = {hep-ph},
+title = {{Physics of synchronized neutrino oscillations caused by self-interactions}},
+url = {https://link.aps.org/doi/10.1103/PhysRevD.65.053011},
+volume = {65},
+year = {2002}
+}
+
+@article{Raffelt2008,
+abstract = {We identify a generic new form of collective flavor oscillations in dense neutrino gases that amounts to a self-induced parametric resonance. It occurs in a homogeneous and isotropic ensemble when a range of neutrino modes is prepared in a different flavor than the neighboring modes with lower and higher energies. The flavor content of the intermediate spectral part librates relative to the other parts with a frequency corresponding to a typical Delta m{\^{}}2/2E. This libration persists in the limit of an arbitrarily large neutrino density where one would have expected synchronized flavor oscillations.},
+archivePrefix = {arXiv},
+arxivId = {0810.1407},
+author = {Raffelt, Georg G.},
+doi = {10.1103/PhysRevD.78.125015},
+eprint = {0810.1407},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Raffelt/2008 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
+issn = {15507998},
+journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+mendeley-groups = {Neutrino/collective},
+number = {12},
+pages = {1--9},
+title = {{Self-induced parametric resonance in collective neutrino oscillations}},
+volume = {78},
+year = {2008}
+}
+
+
+@article{Hannestad2006,
+abstract = {Neutrino-neutrino interactions can lead to collective flavour conversion effects in supernovae and in the early universe. We demonstrate that the case of "bipolar" oscillations, where a dense gas of neutrinos and antineutrinos in equal numbers completely converts from one flavour to another even if the mixing angle is small, is equivalent to a pendulum in flavour space. Bipolar flavour conversion corresponds to the swinging of the pendulum, which begins in an unstable upright position (the initial flavour), and passes through momentarily the vertically downward position (the other flavour) in the course of its motion. The time scale to complete one cycle of oscillation depends logarithmically on the vacuum mixing angle. Likewise, the presence of an ordinary medium can be shown analytically to contribute to a logarithmic increase in the bipolar conversion period. We further find that a more complex (and realistic) system of unequal numbers of neutrinos and antineutrinos is analogous to a spinning top subject to a torque. This analogy easily explains how such a system can oscillate in both the bipolar and the synchronised mode, depending on the neutrino density and the size of the neutrino-antineutrino asymmetry. Our simple model applies strictly only to isotropic neutrino gasses. In more general cases, and especially for neutrinos streaming from a supernova core, different modes couple to each other with unequal strength, an effect that can lead to kinematical decoherence in flavour space rather than collective oscillations. The exact circumstances under which collective oscillations occur in non-isotropic media remain to be understood.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0608695},
+author = {Hannestad, Steen and Raffelt, Georg G. and Sigl, G{\"{u}}nter and Wong, Yvonne Y Y},
+doi = {10.1103/PhysRevD.74.105010},
+eprint = {0608695},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Hannestad et al/2006 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
+issn = {15507998},
+journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+mendeley-groups = {Neutrino/collective},
+number = {10},
+pages = {1--21},
+primaryClass = {astro-ph},
+title = {{Self-induced conversion in dense neutrino gases: Pendulum in flavor space}},
+volume = {74},
+year = {2006}
+}
 
 
 
