fixed typo in introduction it's; update chap4 for dispersion relations and gaps

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -43,22 +43,22 @@ Professor Huaiyu Duan}
 
 \date{April, \thisyear}
 
-% \maketitle
+\maketitle
 
 %\makecopyright
 %Copyright page is no longer necessary D. Murrell
 
-% \include{chapters/dedication}
-% \include{chapters/epigraph}
-% \include{chapters/acknowledgments}
+\include{chapters/dedication}
+\include{chapters/epigraph}
+\include{chapters/acknowledgments}
 
 % \maketitleabstract %(required even though there's no abstract title anymore)
 %
 \include{chapters/abstract}
 
-% \tableofcontents
-% \listoffigures
-% \listoftables
+\tableofcontents
+\listoffigures
+\listoftables
 
 
 
@@ -77,7 +77,7 @@ Professor Huaiyu Duan}
 
 
 % the back matter
-% \backmatter
+\backmatter
 
 % \bibliographystyle{AMS}
 \addcontentsline{toc}{chapter}{References}
