update dr and gap section

--- a/preambles.tex
+++ b/preambles.tex
@@ -103,6 +103,7 @@ sorting=ynt
 \newcommand{\RR}{\mathrm R}
 \newcommand{\dd}{\mathrm d}
 
+\newcommand{\vph}{v_{\mathrm{ph}}}
 
 %%%%%%  PREAMBLES %%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
