update halo in chap4

--- a/preambles.tex
+++ b/preambles.tex
@@ -102,8 +102,14 @@ sorting=ynt
 \newcommand{\xx}{\mathrm x}
 \newcommand{\RR}{\mathrm R}
 \newcommand{\dd}{\mathrm d}
+\newcommand{\FF}{\mathrm F}
+\newcommand{\BB}{\mathrm F}
 
 \newcommand{\vph}{v_{\mathrm{ph}}}
+
+\usepackage[]{algorithm2e}
+% \usepackage{algorithm}
+% \usepackage[noend]{algpseudocode}
 
 %%%%%%  PREAMBLES %%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
