--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -6,7 +6,7 @@
 %     Minor mods by N. Doren 08/26/11
 
 % Use the following specification for BOTTOM page numbering:
-\documentclass{unmeethesis}
+\documentclass[botnum]{unmeethesis}
                  % OR
 % Use the following specification for TOP page numbering:
 % \documentclass[fleqn]{unmeethesis} % fleqn move all the display equations to the left instead of center.
