review: chap1 introduction

--- a/references.bib
+++ b/references.bib
@@ -219,6 +219,23 @@ year = {1985}
 }
 
 
+@article{Bethe1985r,
+author = {Bethe, Hans A and Wilson, James R},
+doi = {10.1086/163343},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bethe, Wilson/1985 - The Astrophysical Journal.pdf:pdf},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+mendeley-groups = {Neutrino},
+month = aug,
+number = {2},
+pages = {14},
+title = {{Revival of a stalled supernova shock by neutrino heating}},
+url = {http://adsabs.harvard.edu/doi/10.1086/163343},
+volume = {295},
+year = {1985}
+}
+
+
 
 %%%%%%% Introduction %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
