--- a/preambles.tex
+++ b/preambles.tex
@@ -91,6 +91,7 @@ sorting=ynt
 \newcommand{\RD}{D}
 \newcommand{\ri}{\mathrm{i}}
 \DeclareMathOperator{\sign}{sign}
+\DeclareMathOperator{\Sign}{Sign}
 
 
 
