--- a/references.bib
+++ b/references.bib
@@ -786,6 +786,19 @@ year = {2000}
 }
 
 
+@article{Patrignani:2016xqp,
+      author         = "Patrignani, C. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C40",
+      year           = "2016",
+      number         = "10",
+      pages          = "100001",
+      doi            = "10.1088/1674-1137/40/10/100001",
+      SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
+}
+
 @article{Kneller2013,
 abstract = {Large amplitude oscillations between states of a quantum system can be stimulated by sinusoidal external potentials with frequencies that are equal to the energy level splitting of the states or a fraction thereof. We investigate this effect for neutrino oscillations both analytically and numerically finding a simple expression for amplitude and wavelength of the transitions as a function of the density, the amplitude and wavenumber of the fluctuation, and the matter mixing matrix elements. We apply our findings to the supernova environment and find that it is possible to predict stimulated transitions that occur due to sinusoidal perturbations in the density.},
 archivePrefix = {arXiv},
